--- a/src/app/share-dialog/share-dialog.component.scss
+++ b/src/app/share-dialog/share-dialog.component.scss
@@ -18,4 +18,10 @@
   .mat-mdc-dialog-actions {
     justify-content: center;
   }
+
+  .copy-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
