--- a/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.scss
+++ b/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.scss
@@ -11,3 +11,10 @@
 .settings > * {
     margin: 4px 7px 4px 0;
 }
+
+.lock-voting-toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+}
