--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -140,6 +140,7 @@ as movie ) { @let movieReactionWatched = movieReactionWatched$ | async;
         </div>
         @if (voteable) {
         <voter
+          [class.locked]="locked" 
           [pollItem]="pollItem"
           [hasVoted]="hasVoted"
           [size]="condensedView ? 's' : 'm'"
