--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -26,14 +26,14 @@ userService.isCurrentUser(poll?.owner) : false);
           </div>
           @if (poll.date) {
           <div class="poll-date">
-            <i class="fa-regular fa-calendar"></i>
             {{ poll.date?.toDate() | date : "d/M/YYYY" }}
           </div>
           } @if (poll.description) {
           <div class="poll-description">
             {{ poll.description }}
           </div>
-          } @if (pollOwner) {
+          }
+          @if (pollOwner) {
           <div class="allow-random-draw">
             <label
               >As a poll owner, you can draw a random option from the poll. Make
@@ -122,6 +122,11 @@ userService.isCurrentUser(poll?.owner) : false);
           </div>
         </div>
       </div>
+      @if (poll.locked) {
+        <div class="poll-date locked" style="margin: -20px auto 20px; display: flex; justify-content: center;">
+          Poll locked from voting (by poll ownet at {{ poll.locked?.toDate() | date : "d/M/YYYY HH:mm" }})
+        </div>
+      }
     </div>
     <!-- Display options -->
     <div
@@ -184,11 +189,12 @@ userService.isCurrentUser(poll?.owner) : false);
         [pollMovies]="getPollMovies(pollItems)"
         (onRemoved)="removePollItem(poll, $event)"
         [class.voted]="letHadVoted"
+        [locked]="poll.locked"
         [showCreator]="poll.showPollItemCreators"
         [useSeenReaction]="poll.useSeenReaction"
         [condensedView]="useCondensedMovieView"
         [orderNumber]="poll.rankedMovieList ? i + 1 : false"
-        (reaction)="reaction(poll.id, pollItem, $event)"
+        (reaction)="reaction(poll, poll.id, pollItem, $event)"
         (setDescription)="setDescription(poll, pollItems, $event)"
         (addMovie)="addMoviePollItem(poll, pollItems, $event)"
       ></movie-poll-item>
