--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -1,12 +1,14 @@
 <div
   class="voter-container cursor-pointer"
   [class.voted]="hasVoted"
+  [class.voting-locked]="locked"
   [ngClass]="'size-' + size"
   (click)="clicked()"
   matRipple
-  [matRippleColor]="locked ? undefined : '#d9c6ee'"
+  matRippleColor="#d9c6ee"
+  [matRippleDisabled]="locked"
 >
-  <div class="votes" [matTooltip]="locked ? undefined : pollItem.voters | voters : 'Voters: '">
+  <div class="votes" [matTooltip]="pollItem.voters | voters : 'Voters: ' : true">
     <span>{{ pollItem.voters.length }}</span>
   </div>
   <div class="button-container">
