--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -45,6 +45,25 @@
       }
     }
   }
+
+  &.voting-locked {
+    $locked: #999;
+    cursor: not-allowed !important;
+    border: 2px solid $locked;
+
+    .button-container {
+      background-color: lightgrey;
+    }
+
+    &.voted {
+      background-image: linear-gradient(175deg, #{$locked} 50%, lightgrey 100%);
+    }
+
+    .votes {
+      border-bottom: 2px solid #999;
+      margin-bottom: -2px;
+    }
+  }
 }
 
 .heart-icon {
