Retain addMovie state with the locked status. Improve locked voter styles.

--- a/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
+++ b/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
@@ -55,7 +55,10 @@
   <div class="settings">
     <mat-slide-toggle
       [disabled]="this.pollTemp.locked"
-      [(ngModel)]="pollTemp.allowAdd"
+      [checked]="pollTemp.locked ? false: pollTemp.allowAdd"
+      (change)="
+        pollTemp.allowAdd = $event.checked;
+      "
       matTooltip="Allow users to add their preferred options to the poll"
       >Allow adding of options</mat-slide-toggle
     >
