--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -47,9 +47,9 @@
   }
 
   &.voting-locked {
-    $locked: #707070;
+    $locked: darkgrey;
     cursor: not-allowed !important;
-    border: 2px solid $locked;
+    border: 2px solid lightgray;
     background-image: linear-gradient(178deg, #fff 0, #fff 100%);
 
     .button-container {
@@ -60,16 +60,19 @@
     }
 
     .votes {
-      border-bottom: 2px solid $locked;
+      border-bottom: 2px solid lightgray;
       margin-bottom: -2px;
-      color: $locked;
+      color: lightgray;
     }
 
     &.voted {
       background-image: linear-gradient(175deg, #fff 50%, #fff 100%);
+      border: 2px solid $locked;
+
       .votes {
-        background: #707070;
+        background: $locked;
         color: white !important;
+        border-bottom: 2px solid $locked;
       }
     }
   }
